tests/scale_codec_ui/invalid_attr_name.rs
#[derive(::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
pub enum Enum {
    #[codec(scale = 1)]
    Variant1,
}

fn main() {}
